--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body {
-    margin 0;
+    margin: 0;
     padding: 0;
     min-height: 100vh;
     display: flex;
@@ -14,7 +14,7 @@ body {
     transform: rotate(-45deg);
     background-color: red;
     box-shadow: -10px 10px 120px red ;
-    animation: heart 0.6 linear infinite;
+    animation: heart 0.6s linear infinite;
 }
 
 @keyframes heart {
