--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,7 @@ body {
     transform: rotate(-45deg);
     background-color: red;
     box-shadow: -10px 10px 120px red ;
-    animation: heart 0.6s linear infinite;
+    animation: heart 0.6s linear alternate-reverse;
 }
 
 @keyframes heart {
